# r11data

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ruff-formatter.yml  ruff-linter.yml
r11data/: __init__.py  abcs.py  deaths_log.py  main.py  starlegs_log.py
r11data/kekaumenos/: generate_triples.py  matches.csv  matches.html  models.py  runner.py  template.html
r11data/kekaumenos/data/: kekaumenos_eng.json  kekaumenos_grc.json  matches_selected_items.json
r11data/kekaumenos/sparql/: kekaumenos_queries.py
r11data/kekaumenos/utils/: utils.py
r11data/ontologies/: crm.ttl  crmdig.ttl
r11data/output/kekaumenos/: kekaumenos_graph.ttl
r11data/output/starlegs/: starlegs.ttl
r11data/output/tabular/: #deaths.ttl#  deaths.ttl
r11data/starlegs/: runner.py
r11data/starlegs/utils/: _types.py  sparql_templates.py  starlegs_logging.py
r11data/tabular/deaths/: converters.py  date_parser.py  rules.py  runner.py
r11data/tabular/deaths/query_templates/: __init__.py  editor_deaths.rq  source_deaths.rq
r11data/tabular/deaths/tables/: partitions.py
r11data/tabular/deaths/tables/xlsx/: c11deaths-AA.xlsx  c11deaths-MR.xlsx
r11data/tabular/deaths/triple_generators/: deaths_editor_triple_generators.py  deaths_source_triple_generators.py  metadata_triple_generator.py
r11data/tabular/deaths/utils/: loggers.py  namespaces.py  utils.py
r11data/tabular/main/: models.py  runner.py  triple_generators.py
r11data/tabular/main/sources/: lewis.xlsx
r11data/tabular/main/utils/: df_utils.py  paths.py  rdf_utils.py
r11data/utils/: paths.py
tests/utils/: starlegs_utils.py
tests/utils/strategies/: starlegs_graph_strategy.py
tests/utils/tests_starlegs/: test_starlegs_constructor.py
