[project]
name = "r11data"
version = "0.1.0"
description = ""
authors = [{ name = "Lukas Plank", email = "lupl@tuta.io" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "rdflib>=7.0.0,<8",
    "rich>=13.7.1,<14",
    "convertdate>=2.4.0,<3",
    "pydantic>=2.8.2,<3",
    "toolz>=0.12.1,<0.13",
    "sparqlwrapper>=2.0.0,<3",
    "lodkit>=0.1.13,<0.2",
    "pytz~=2024.1",
    "python-dotenv>=1.0.1,<2",
    "pydantic-settings>=2.5.2,<3",
    "hypothesis>=6.112.1,<7",
    "httpx>=0.27.2,<0.28",
    "lxml>=5.3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9",
    "ruff>=0.6.6,<0.7",
]

[tool.uv]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
